--- a/capitulos/Evaluacion.tex
+++ b/capitulos/Evaluacion.tex
@@ -14,14 +14,14 @@
 \subsection{Métricas de evaluación}
 \label{sec:Col_Eval}
 
-\noindent Para la evaluación de los resultados en clasificación textual o de documentos se utiliza comúnmente la matriz de confusión. Se trata de una una herramienta que representa en cada columna el número de predicciones de cada clase, mientras que cada fila representa a las instancias en la clase real. En la siguiente imagen se presenta un esquema de la matriz de confusión:
+\noindent Para la evaluación de los resultados en clasificación textual o de documentos se utiliza comúnmente la matriz de confusión. Se trata de una herramienta que representa en cada columna el número de predicciones de cada clase, mientras que cada fila representa a las instancias en la clase real. En la siguiente imagen se presenta un esquema de la matriz de confusión:
 
 \begin{center}
 	\includegraphics[width=0.5\textwidth]{imagenes/confusion_matrix_1.png} %[width=4cm,,keepaspectratio]
 	\captionof{figure}{Matriz de confusión}	
 \end{center}
 
-Esta tabla está formada por verdaderos positivos, verdaderos negativos, falsos positivos y falsos negativos. De este modo, si un documento es clasificado por el sistema automático en la misma categoría que la clasificación manual, se considerará como un verdadero positivo o negativo (\textit{True Positive}, TP o \textit{True Negative}, TN), mientras que si el documento es clasificado por el sistema con una categoría diferente, se estará ante un falso negativo o falso positivo (\textit{False Positive}, FP o \textit{False Negative}, FN).Utilizando estos cuatro componentes se calculas las medidas principales para evaluar los resultados:
+Esta tabla está formada por verdaderos positivos, verdaderos negativos, falsos positivos y falsos negativos. De este modo, si un documento es clasificado por el sistema automático en la misma categoría que la clasificación manual, se considerará como un verdadero positivo o negativo (\textit{True Positive}, TP o \textit{True Negative}, TN), mientras que si el documento es clasificado por el sistema con una categoría diferente, se estará ante un falso negativo o falso positivo (\textit{False Positive}, FP o \textit{False Negative}, FN).Utilizando estos cuatro componentes se calculan las medidas principales para evaluar los resultados:
 
 \begin{itemize}
 	\itemsep0em 
@@ -52,14 +52,14 @@ El propósito principal de este corpus es la obtención de texto con alto contenid
 \subsection{Líneas base (\textit{baseline})}
 \label{sec:Col_Eval}
 
-\noindent Como se ha ido introduciendo en el capítulo 2, las referencias en el campo de detección del machismo son muy reducidas y, por tanto, es complejo encontrar algún trabajo comparable con el sistema desarrollado. Es por esto que en este trabajo se han desarrollado dos líneas base con las que comparar los resultados obtenidos por el sistema diseñado. La primera de ellas plantea un sistema de clasificación basado en una regresión logística sobre los atributos \textit{tf-idf} utilizando los unigramas de cada documento. De este modo, se plantea un sistema sencillo pero pudiendo ser, en ocasiones, mucho más efectivo que otras aproximaciones más complejas que utilizan bi-gramas o categorías gramaticales de los términos, por tanto, se trata de un \textit{baseline} difícil de batir.
+\noindent Como se ha ido introduciendo en el capítulo 2, las referencias en el campo de detección del machismo son muy reducidas y, por tanto, es complejo encontrar algún trabajo comparable con el sistema desarrollado. Es por esto que en este trabajo se han desarrollado dos líneas base con las que comparar los resultados obtenidos por el sistema diseñado. La primera de ellas plantea un sistema de clasificación basado en una regresión logística sobre los atributos \textit{tf-idf} utilizando los unigramas de cada documento. De este modo, se plantea un sistema sencillo pero pudiendo ser, en ocasiones, mucho más efectivo que otras aproximaciones más complejas que utilizan bi-gramas o categorías gramaticales de los términos. Por tanto, se trata de un \textit{baseline} difícil de batir.
 
 La segunda línea base está basada en un clasificador sencillo que predice siempre la clase mayoritaria. En este caso, como se puede observar en la tabla 4.7, la clase mayoritaria sería ``NO\_MACHISTA'' y, por tanto, este sistema clasificaría todos los registros de entrada con este valor de clase. La intención de esta línea base es comparar los resultados del sistema con otro hipotético no informado que no es capaz de ``aprender'' ningún patrón del conjunto de datos de entrenamiento.
 
 \subsection{Experimento 1: Búsqueda de hiperparámetros mediante la optimización de la medida F1}
 \label{sec:Col_Eval}
 
-\noindent El primer experimento realizado trata de configurar cada algoritmo de clasificación para la tarea especifica que van a desarrollar. Como se introdujo en el capítulo 5 para la tarea de clasificación se emplean 3 algoritmos distintos disponibles en ``scikit-learn'': Regresión logística, Random Forest y SVM. En este primer experimento, se realiza una búsqueda para los siguientes parámetros:
+\noindent El primer experimento realizado trata de configurar cada algoritmo de clasificación para la tarea especifica que van a desarrollar. Como se introdujo en el capítulo 5, para la tarea de clasificación se emplean tres algoritmos distintos disponibles en ``scikit-learn'': Regresión logística, Random Forest y SVM. En este primer experimento, se realiza una búsqueda para los siguientes parámetros:
 
 \begin{itemize}
 	\itemsep0em 
@@ -68,11 +68,11 @@ La segunda línea base está basada en un clasificador sencillo que predice siempr
 	\item SVM: C = [1, 10, 100, 10000], gamma = [0.001, 0.1, 0.6, 'auto'], kernel = 'rbf'.
 \end{itemize}
 
-Para ello, se sigue el procedimiento presentado en la figura 6.2 de forma iterativa. En el primer paso, se realizan 10 repartos aleatorios del corpus en dos conjuntos de datos: entrenamiento (training) y testeo (testing). Para el conjunto de training, se reservan el 30\% de los datos y para el test, el resto. Para cada uno de los diez repartos, se utiliza el conjunto de training para la búsqueda de hiperparámetros y el testing para evaluar los resultados con los parámetros encontrados.
+Para ello, se sigue el procedimiento presentado en la figura 6.2 de forma iterativa. En el primer paso, se realizan 10 repartos o subconjuntos aleatorios del corpus en dos conjuntos de datos: entrenamiento (training) y testeo (testing). Para el conjunto de training, se reservan el 30\% de los datos y para el test, el resto. Para cada uno de los diez repartos, se utiliza el conjunto de training para la búsqueda de hiperparámetros y el testing para evaluar los resultados con los parámetros encontrados.
 
-Para la búsqueda de parámetros, se realiza una validación cruzada (\textit{cross validation}) con 5 grupos realizando el entrenamiento en 4 de ellos y el testeo en el grupo restante. Este proceso se repite para los 5 grupos y permite obtener los parámetros que mejor han funcionado en el proceso según el valor de la medida F1. 
+Para la búsqueda de parámetros, se realiza una validación cruzada (\textit{cross validation}) con cinco grupos realizando el entrenamiento en cuatro de ellos y el testeo en el grupo restante. Este proceso se repite para los cinco grupos y permite obtener los parámetros que mejor han funcionado en el proceso según el valor de la medida F1. 
 
-En la siguiente etapa del proceso se utiliza el segundo conjunto de datos reservado para el testeo (el 70\% de todo el corpus) y se realiza la evaluación final. Utilizando los parámetros de entrada obtenidos en la etapa anterior, se realiza una validación cruzada con 10 grupos del conjunto de testing. De nuevo, en este proceso se realizaría un reparto en 10 grupos, donde 9 de ellos serán utilizados para el entrenamiento y el grupo restante para el testeo, repitiendo el proceso diez veces, una por grupo. Estas dos etapas descritas se repiten para los diez repartos indicados al inicio.
+En la siguiente etapa del proceso se utiliza el segundo conjunto de datos reservado para el testeo (el 70\% de todo el corpus) y se realiza la evaluación final. Utilizando los parámetros de entrada obtenidos en la etapa anterior, se realiza una validación cruzada con 10 grupos del conjunto de testing. De nuevo, en este proceso se realiza un reparto en 10 grupos, donde nueve de ellos serán utilizados para el entrenamiento y el grupo restante para el testeo, repitiendo el proceso diez veces, una por grupo. Estas dos etapas descritas se repiten para los diez repartos indicados al inicio.
 
 Este experimento permite medir el resultado de un sistema diseñado especificamente para esta tarea pues la configuración de los algoritmos de clasificación se realiza según los datos del corpus. Además, al realizar diez iteraciones para el proceso, la varianza de los resultados se reduce y son menos dependientes del tipo de datos con el que se ha entrenado. La desventaja principal de este método es que es necesario reservar un conjunto de datos para la búsqueda de parámetros y se reduce la información de la que dispondrá el sistema de clasificación definitivo que realizará la predicción.
 
@@ -84,7 +84,7 @@ Este experimento permite medir el resultado de un sistema diseñado especificamen
 \subsection{Experimento 2: Cross validation con parámetros por defecto}
 \label{sec:Col_Eval}
 
-\noindent El segundo experimento consiste en una única validación para todo el corpus utilizando los parámetros por defecto para todos los algoritmos de clasificación utilizados.En este caso, se ha optado por una validación cruzada con diez grupos. En la figura 6.3 se presenta un ejemplo equivalente para cinco grupos. 
+\noindent El segundo experimento consiste en una única validación para todo el corpus utilizando los parámetros por defecto para todos los algoritmos de clasificación utilizados. En este caso, se ha optado por una validación cruzada con diez grupos. En la figura 6.3 se presenta un ejemplo equivalente para cinco grupos. 
 
 En este procedimiento, se realiza una división del conjunto en 10 grupos del mismo tamaño del corpus y, de forma iterativa, se utilizarán nueve de ellos para el entrenamiento y el grupo restante para el testeo.
 
@@ -102,7 +102,7 @@ La tabla 6.1 muestra los resultados promedio de exactitud (\textit{Accuracy}), m
 
 En relación a la comparación de los resultados obtenidos por el método con las dos líneas bases, en este caso las diferencias con respecto a la aproximación basada en unigramas son de unos cuatro puntos porcentuales para cada medida. Por tanto, el sistema mejora esta primera aproximación en todas las medidas pero, como se preveía, la línea base ya es un buen punto de partida del sistema.
 
-En el caso de la línea base basada en el clasificador sencillo de la clase mayoritaria, si se pueden observar grandes diferencias en las métricas de calidad. Esto indica, que cualquiera de las soluciones propuestas será mucho más adecuada que un clasificador basado en una única regla sencilla.
+En el caso de la línea base basada en el clasificador sencillo de la clase mayoritaria, sí se pueden observar grandes diferencias en las métricas de calidad. Esto indica que cualquiera de las soluciones propuestas será mucho más adecuada que un clasificador basado en una única regla sencilla.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
@@ -125,9 +125,9 @@ Los resultados presentados en la tabla 6.1 muestran que el sistema de clasificac
 
 En concreto, la diferencia entre el mejor de los clasificadores del método propuesto y la línea base basada en unigramas es de 4\%. Esta diferencia se debe principalmente a la información que aportan los atributos numéricos y categóricos para la tarea del clasificación. Esto se confirma en la figura 4.9, donde se puede observar como la longitud del tweet y el número de \textit{retweets} tienen influencia en la clasificación. Se puede intuir como en el caso de los tweets dudosos, la longitud media es mucho menor que en el caso de los machistas y no machistas. Además, los tweets dudosos no presentan gran cantidad de \textit{retweets} si se comparan con el resto de clases. Es por esto, que utilizar estos atributos en el sistema de clasificación aporta información útil y permite mejorar los resultados.
 
-Esta hipótesis se reafirma con los resultados de la figura 6.4. En esta figura, se observan los valores SHAP (\textit{SHapley Additive exPlanations}) \cite{shap} para los tweets dudosos. Esta técnicas permite desglosar cada predicción individualmente para mostrar el impacto que tiene cada atributo en la clasificación. El primer atributo (\textit{display\_text\_width}) coincide con la longitud del tweet, y, se confirma que a menor valor en este atributo (mejor longitud del tweet) más probable es que el sistema clasifique el texto como dudoso. Cabe destacar otros atributos como los términos como ``nenaza'' y ``feminazi'' en los que se observa que la presencia de estos términos reduce la probabilidad de que el sistema clasifique el tweet como dudoso. Esto se debe a que la existencia de estos términos en los tweets se han asociado con comportamientos machistas durante el proceso de etiquetado, como se puede puede observar en la figura 6.5. Otro atributo interesante que provocó inconvenientes durante el proceso de etiquetado manual del corpus es la existencia del término ``lagartona''. En este caso, la existencia de este término provoca que aumente la probabilidad de que el tweet sea dudoso, esto ocurre por la ambigüedad de la palabra que puede hacer referencia a una persona que vende su cuerpo a cambio de dinero o a una persona pícara. Esta confusión provoca que, si existe el término en un mensaje, aumente la probabilidad de ser dudoso.
+Esta hipótesis se reafirma con los resultados de la figura 6.4. En esta figura, se observan los valores SHAP (\textit{SHapley Additive exPlanations}) \cite{shap} para los tweets dudosos. Esta técnicas permite desglosar cada predicción individualmente para mostrar el impacto que tiene cada atributo en la clasificación. El primer atributo (\textit{display\_text\_width}) coincide con la longitud del tweet, y, se confirma que a menor valor en este atributo (menor longitud del tweet) más probable es que el sistema clasifique el texto como dudoso. Cabe destacar otros atributos como los términos como ``nenaza'' y ``feminazi'' en los que se observa que la presencia de estos términos reduce la probabilidad de que el sistema clasifique el tweet como dudoso. Esto se debe a que la existencia de estos términos en los tweets se han asociado con comportamientos machistas durante el proceso de etiquetado, como se puede puede observar en la figura 6.5 y 6.6. Otro atributo interesante que provocó inconvenientes durante el proceso de etiquetado manual del corpus es la existencia del término ``lagartona''. En este caso, la existencia de este término provoca que aumente la probabilidad de que el tweet sea dudoso, esto ocurre por la ambigüedad de la palabra que puede hacer referencia a una persona que vende su cuerpo a cambio de dinero o a una persona pícara. Esta confusión provoca que, si existe el término en un mensaje, aumente la probabilidad de ser dudoso. Otro término que ha provocado confusión durante el etiquetado ha sido ``niñata''. Como se puede observar en la figura 6.6, la existencia de este término aumenta la probabilidad de que el tweet sea no machista pues, por si solo, este término no conlleva una actitud machista. A pesar de esto, se trata de un término que, según el contexto en el que sea empleado, podría ser considerado machista.
 
-Estos atributos numéricos y categóricos influyen también para el resto de valores de la clase. De hecho, se puede observar en la figura 6.7 como las 3 primeras variables en importancia son variables no textuales. Por ejemplo, la variables ``statuses\_count'' indica la cantidad de mensajes emitidos por el usuario que publica el tweet y, en este sistema, tiene gran impacto para clasificar los tweets como machistas y no machistas.
+Estos atributos numéricos y categóricos influyen también para el resto de valores de la clase. De hecho, se puede observar en la figura 6.7 como las tres primeras variables en importancia son variables no textuales. Por ejemplo, la variable ``statuses\_count'' indica la cantidad de mensajes emitidos por el usuario que publica el tweet y, en este sistema, tiene un impacto razonable para clasificar los tweets como machistas y no machistas. Esto podría explicarse por el hecho de que, cuanto más activo sea el usuario en la red social, más probable es que exprese sus ideas acerca del machismo, ya sea a favor o en contra con el uso de expresiones machistas.
 
 %statuses\_count :La cantidad de Tweets (incluidos los retweets) emitidos por el usuario. 
 %listed\_count :Número de listas públicas de las que el usuario es miembro.
@@ -158,12 +158,12 @@ A priori, cabía esperar mejores resultados para el clasificador SVM pues ha sido
 
 En cuanto a los resultados obtenidos con el algoritmo RF, es importante señalar que se ha conseguido unos valores elevados en la tasa de acierto y en precisión debido a la gran capacidad de la técnica para detectar los tweets no machistas. Esto se puede confirmar mediante la matriz de confusión representada en la tabla 6.2 donde se observa que el valor de clase ``NO\_MACHISTA'' es claramente el que mejor se clasifica mediante esta técnica. 
 
-La elevada precisión del algoritmo RF para los tweets no machistas se debe al efecto del desbalanceo de la clase. Como ya se introdujo en los capítulos anteriores, y debido a la naturaleza del problema, existen una gran predominancia de los tweets no machistas en el corpus etiquetado manualmente. Esto provoca, que algoritmos como los árboles de decisión, puedan tener un sesgo en sus predicciones hacia la clase predominante \cite{Liu}. Otro tipo de técnicas como SVM pueden alcanzar mejores rendimientos en este tipo de problemas \cite{Ustuner2016}. Pese a esto, RF no se aleja demasiado en otras métricas como F1 por el uso conjunto de numerosos árboles de decisión y que permite mejorar el rendimiento que se obtendría con un único árbol de decisión.
+La elevada precisión del algoritmo RF para los tweets no machistas se debe al efecto del desbalanceo de la clase. Como ya se introdujo en los capítulos anteriores, y debido a la naturaleza del problema, existen una gran predominancia de los tweets no machistas en el corpus etiquetado manualmente. Esto provoca que algoritmos como los árboles de decisión, puedan tener un sesgo en sus predicciones hacia la clase predominante \cite{Liu}. Otro tipo de técnicas como SVM pueden alcanzar mejores rendimientos en este tipo de problemas \cite{Ustuner2016}. Pese a esto, RF no se aleja demasiado en otras métricas como F1 por el uso conjunto de numerosos árboles de decisión y que permite mejorar el rendimiento que se obtendría con un único árbol de decisión.
 
 %%
 % Se puede mejorar la explicación: mostrar la estructura de los árboles y obtener importancia de atributos
 
-En cuanto a los algoritmos SVM y LR, los resultados muestran un comportamiento muy similar en ambos casos. Esto se debe principalmente al uso de un ``kernel'' lineal para el algoritmo SVM, lo que provoca que la frontera de decisión entre clases sea lineal, al igual que ocurre con el algoritmo LR. En ambos casos, los resultados muestran una menor capacidad para detectar los tweets no machistas pero se mejora el equilibrio entre el resto de valores de la clase. En la tabla 6.3, se puede observar como estos modelos mejoran notablemente la detección de tweets dudosos y machistas. Esto se debe, probablemente, a un mejor funcionamiento de estos métodos ante clases desbalanceadas.
+En cuanto a los algoritmos SVM y LR, los resultados muestran un comportamiento muy similar en ambos casos. Esto se debe principalmente al uso de un ``kernel'' lineal para el algoritmo SVM, lo que provoca que la frontera de decisión entre clases sea lineal, al igual que ocurre con el algoritmo LR. En ambos casos, los resultados muestran una menor capacidad para detectar los tweets no machistas pero se mejora el equilibrio entre el resto de valores de la clase. En la tabla 6.3, se puede observar cómo estos modelos mejoran notablemente la detección de tweets dudosos y machistas. Esto se debe, probablemente, a un mejor funcionamiento de estos métodos ante clases desbalanceadas.
 
 
 % Please add the following required packages to your document preamble:
@@ -196,14 +196,14 @@ En cuanto a los algoritmos SVM y LR, los resultados muestran un comportamiento m
 	\label{tab:my-table}
 \end{table}
 
-Es importante también destacar que en cualquiera de los dos modelos de clasificación, la principal fuente de errores proviene de la detección de tweets machistas. En la tabla 6.3, se puede observar como en esta clase se produce la mayor parte de los errores donde se clasifican erróneamente más del el 30\% de los tweets machistas. En concreto, la mayor parte de los errores se produce en la clasificación de tweets de este tipo como tweets no machistas. Para estudiar esta fuente de error, se ha realizado un estudio en profundidad para las clasificaciones producidas con este error. Por ejemplo, el tweet ``\textit{@CopitoDeSnow\_ Ahora es cuando digo ``no está mal para ser mujer''}'' se ha clasificado erroneamente como no machista por el sistema. En la figura 6.8 se representa la contribución de los atributos más importantes para la clasificación ofrecida por el sistema. En este caso, la existencia de los términos ``ser'' y ``digo'' además de la inexistencia del término ``nenaza'', aumentan la probabilidad de que el sistema clasifique el tweet como no machista mientras que los atributos que disminuyen la probabilidad de esta clasificación serían el tamaño del tweet y la publicación de éste desde un dispositivo Android. Como se puede observar, no se detectan términos textuales que reduzcan la clasificación de no machista y, por ello, el tweet se clasifica erróneamente. Para este ejemplo, el sistema falla en la detección del grupo ``mal para ser mujer'' como una expresión que claramente conlleva una actitud machista.
+Es importante también destacar que en cualquiera de los dos modelos de clasificación, la principal fuente de errores proviene de la detección de tweets machistas. En la tabla 6.3, se puede observar cómo en esta clase se produce la mayor parte de los errores donde se clasifican erróneamente más del el 30\% de los tweets machistas. En concreto, la mayor parte de los errores se produce en la clasificación de tweets de este tipo como tweets no machistas. Para estudiar esta fuente de error, se ha realizado un estudio en profundidad para las clasificaciones producidas con este error. Por ejemplo, el tweet ``\textit{@CopitoDeSnow\_ Ahora es cuando digo ``no está mal para ser mujer''}'' se ha clasificado erroneamente como no machista por el sistema. En la figura 6.8 se representa la contribución de los atributos más importantes para la clasificación ofrecida por el sistema. En este caso, la existencia de los términos ``ser'' y ``digo'' además de la inexistencia del término ``nenaza'', aumentan la probabilidad de que el sistema clasifique el tweet como no machista mientras que los atributos que disminuyen la probabilidad de esta clasificación serían el tamaño del tweet y la publicación de éste desde un dispositivo Android. Como se puede observar, no se detectan términos textuales que reduzcan la clasificación de no machista y, por ello, el tweet se clasifica erróneamente. Para este ejemplo, el sistema falla en la detección del grupo ``mal para ser mujer'' como una expresión que claramente conlleva una actitud machista.
 
 \begin{center}
 	\includegraphics[scale=0.55,keepaspectratio]{imagenes/shap_values_ej1.png} %[width=4cm,,keepaspectratio]
 	\captionof{figure}{Valores SHAP para ejemplo 1}
 \end{center}
 
-Otro ejemplo de error de este tipo sería el tweet ``\textit{La  negativa a q el aborto sea legal, lleva implícito el elemento castigo: si follaste, pare.Porque las mujeres, no deberían follar tan alegremente, ni que fueran  hombres}''. De nuevo, se puede observar en la figura 6.9 como la inexistencia del término ``nenaza'' aumenta la probabilidad de que el tweet sea no machista. Esto se produce porque, en general, todas las instancias que contenían este término se han considerado machistas y, por tanto, el modelo está sesgado hacia los valores de clase que se le presentaron durante el entrenamiento. Es interesante remarcar, que el término ``deberían'' contribuye a reducir la probabilidad de que el tweet se considere no machista, sin embargo, no lo suficiente para evitar el error del clasificador. Este término se repite mucho en el corpus para dar opiniones machistas acerca de como deben de comportarse las mujeres o colectivos feministas.
+Otro ejemplo de error de este tipo sería el tweet ``\textit{La  negativa a q el aborto sea legal, lleva implícito el elemento castigo: si follaste, pare.Porque las mujeres, no deberían follar tan alegremente, ni que fueran  hombres}''. De nuevo, se puede observar en la figura 6.9 como la inexistencia del término ``nenaza'' aumenta la probabilidad de que el tweet sea no machista. Esto se produce porque, en general, todas las instancias que contenían este término se han considerado machistas y, por tanto, el modelo está sesgado hacia los valores de clase que se le presentaron durante el entrenamiento. Es interesante remarcar, que el término ``deberían'' contribuye a reducir la probabilidad de que el tweet se considere no machista, sin embargo, no lo suficiente para evitar el error del clasificador. Este término se repite mucho en el corpus para dar opiniones machistas acerca de cómo deben de comportarse las mujeres o colectivos feministas.
 
 
 \begin{center}
@@ -282,7 +282,7 @@ En cuanto a las diferencias entre los modelos empleados, se observan las mismas 
 
 Para evaluar el impacto del desbalanceo de la clase hacia tweets no machistas e intentar paliar este efecto, se ha realizado un experimento mediante un muestreo del corpus. Como se puede observar en la tabla 4.7, el valor de la clase ``DUDOSO'' sería el que cuenta con menos instancias dentro del corpus. Por esto, se han realizado una prueba realizando un muestreo aleatorio de las otras dos clases para igualar la cantidad de registros entre las 3 clases que componen el corpus. 
 
-En la tabla se pueden observar los resultados para cada uno de los métodos empleados en el presente trabajo, evaluados mediante una validación cruzada con 10 grupos y los parámetros por defecto (mismas condiciones que el experimento 2).
+En la tabla 6.5 se pueden observar los resultados para cada uno de los métodos empleados en el presente trabajo, evaluados mediante una validación cruzada con 10 grupos y los parámetros por defecto (mismas condiciones que el experimento 2).
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
@@ -295,7 +295,7 @@ En la tabla se pueden observar los resultados para cada uno de los métodos emple
 		\textbf{RF} & 0.68 & 0.68 & 0.68 & 0.68 \\
 		\textbf{SVM} & 0.63 & 0.63 & 0.66 & 0.63 \\ \bottomrule
 	\end{tabular}
-	\caption{Resultados experimento 2}
+	\caption{Resultados experimento 2 con balanceo de clases}
 	\label{tab:my-table}
 \end{table}
 
