Se añade título, nombre y directores

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -157,7 +157,7 @@
 
 \begin{center}
 \begin{LARGE}
-Trabajo Fin de Máster: Título del Trabajo \\ [0.3em]
+Trabajo Fin de Máster: Desarrollo de un sistema para la detección del machismo en redes sociales \\ [0.3em]
 \end{LARGE}
 \end{center}
 
@@ -174,14 +174,15 @@ Trabajo Fin de Máster: Título del Trabajo \\ [0.3em]
 
 \vfill
 \begin{center}
-  \textbf{Nombre del Alumn@} \\ [0.2em]
+  \textbf{Francisco Miguel Rodríguez Sánchez} \\ [0.2em]
   Trabajo de investigación para el \\ \vspace{10pt}
   Máster en Lenguajes y Sistemas Informáticos\\ \vspace{10pt}
   Universidad Nacional de Educación a Distancia\\ \vspace{10pt}
   \vspace{2cm}
-  Dirigido por el \\ \vspace{10pt}
-  \textbf{Prof. Dr. D. Nombre Direct@r} \\ [0.5em]
-  Octubre 2018\\
+  Dirigido por \\ \vspace{10pt}
+  \textbf{Dr. Jorge Amando Carrillo de Albornoz} \\ [0.5em]
+  \textbf{Dr. Laura Plaza Morales} \\ [0.5em]
+  Junio 2019\\
 \end{center}
 
 
